# MeiliSearch

./: Cargo.toml  Cross.toml
.github/workflows/: publish-binaries.yml  publish-cross.yml  publish-crossbuild.yml
meilisearch-http/tests/: content_type.rs
meilisearch-lib/src/index/: dump.rs  updates.rs
meilisearch-lib/src/index_controller/: mod.rs
meilisearch-lib/src/index_controller/dump_actor/: mod.rs
meilisearch-lib/src/index_controller/index_resolver/: uuid_store.rs
meilisearch-lib/src/index_controller/updates/: error.rs  mod.rs
meilisearch-lib/src/index_controller/updates/store/: dump.rs
